# src16-research-and-development

./: .gitignore  Cargo.toml  README.md
NOTES/: type_system.md
contracts/BACKUPS/: src16.sw
contracts/docs/src/: src16-typed-structured-data.md
contracts/src16-typed-data/: Forc.toml
contracts/src16-typed-data/ethereum_example/: Forc.toml
contracts/src16-typed-data/fuel_example/: Forc.toml
contracts/src16_typed_data/: Forc.toml
contracts/src16_typed_data/src/: typed_data_example.sw
contracts/standards/: Forc.toml
contracts/standards/src/: src16.sw  standards.sw
contracts/tests/: Forc.toml
contracts/tests/gas_analysis/: Forc.toml  comparison.md
contracts/tests/gas_analysis/src/: domain_src16_hash_keccak256.sw  domain_src16_hash_sha256.sw  lib.sw
contracts/tests/helpers/: Forc.toml
contracts/tests/helpers/src/: hex.sw  lib.sw
contracts/tests/src/: lib.sw  tests.sw
contracts/tests/typed_data/: .gitignore  Forc.toml
contracts/tests/typed_data/src/: encoding.sw  lib.sw  tests_eip712.sw  tests_src16.sw
crates/custom-src16-encoder/: Cargo.toml  mail.sw
crates/custom-src16-encoder/src/: generate_struct_hash.rs  hex_serde.rs  lib.rs  src16_encoder2.rs  src16_token.rs  src16_v1.rs  src16_v2.rs  src16_v4.rs
crates/eip712-encoder/: Cargo.toml
crates/eip712-encoder/src/: compact.rs  eip712_module07_v2.rs  eip712_v1.rs  lib.rs
crates/test-mail-me/: Cargo.toml
crates/test-mail-me/src/: helpers.rs  interfaces.rs  lib.rs  setup_env.rs  test_eth_mail_me.rs  test_fuel_mail_me.rs  test_mail_me.rs
src/: crypto_helpers.rs  eip712_module07_v2.rs  main.rs  src16_v1.rs
